# asciineditor

./: .gitignore  LICENSE  README.md  asciineditor.py  asciineditor_gui.py  pyproject.toml
test/: cut_result.cast  cut_ts.cast  joined.cast  part1.cast  part2.cast  sample.cast  speed_result.cast  speed_slow.cast
