[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "asciineditor"
version = "0.1.0"
description = "An editor for asciicast v2 (.cast) files"
requires-python = ">=3.8"
license = "MIT"

[tool.setuptools]
py-modules = ["asciineditor", "asciineditor_gui"]

[project.scripts]
asciineditor = "asciineditor:main"
asciineditor-gui = "asciineditor_gui:main"
